# techtown-sample

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml  onprem-deployment.yml  release-dev.yml  release.yml
src/: CMakeLists.txt  Calculator.cpp  CalculatorApp.cpp  Version.h
src/include/: Calculator.h
test/: CMakeLists.txt  CalculatorTests.cpp
